# tendy-spider

./: .env.example  .gitignore  .npmrc  AGENTS.md  DECISIONS.md  Makefile  README.md  TASK.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.agents/skills/create-architecture-artifacts/: SKILL.md
.codex/: config.toml
.codex/agents/: backend_developer.toml  contracts_data_developer.toml  frontend_developer.toml  lead_developer.toml  platform_quality_developer.toml  solution_architect.toml
.github/workflows/: ci.yml
.obsidian/: app.json  community-plugins.json  templates.json  types.json
apps/web/: package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_ARTIFACTS.md  DATASET_MATRIX.md  DEVELOPMENT_AGENTS.md  SIDEKICK_ANALYSIS.md  SOURCES.md
docs/diagrams/: component-m0-package-dependencies.mmd  container-target-runtime.mmd  sequence-m0-local-startup-health.mmd
infra/: compose.yaml
project-management/: Dashboard.md  PLUGIN_LOCK.md  Project Portfolio.base  README.md
project-management/Boards/: Delivery Board.md
project-management/decisions/: O-001 - Initial live price provider.md  O-002 - LLM provider and model policy.md  O-003 - Deployment target.md  O-004 - Product identity.md  O-005 - Architecture presentation identity.md
project-management/milestones/: M0 - Repository and contract foundation.md  M1 - Free-data vertical slice.md  M2 - Chart context and research workspace.md  M3 - Scanner alerts and backtest explanation.md  M4 - Multi-symbol deep research.md
project-management/risks/: R-001 - Market-data licensing constraints.md  R-002 - Point-in-time data errors.md  R-003 - Repository has no software license.md  R-004 - Plugin view drift.md
project-management/session-notes/: 2026-07-19-conversation-backup.md  2026-07-19-session-handoff.md
project-management/templates/: Decision Record.md  Milestone.md  Risk.md  Work Item.md
project-management/work-items/: TS-M0-01 - scaffold-typed-monorepo.md  TS-M0-02 - add-local-development-stack.md  TS-M0-03 - define-provider-neutral-contracts.md  TS-M0-04 - add-offline-ci-quality-gates.md  TS-M0-05 - add-safe-environment-template.md
scripts/: dev.py  install_obsidian_plugins.sh  validate_project_dashboard.py
services/api/: __init__.py  health.py  main.py  pyproject.toml
services/api/tests/: test_health.py
tests/integration/: test_contract_fixture_boundary.py
(+27 files in other folders)
