[project]
name = "tendy-spider-api"
version = "0.1.0"
description = "Typed HTTP API for the Tendy Spider research service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.18,<2",
    "pytest>=8.4,<9",
    "ruff>=0.14,<1",
]

[tool.uv]
package = false

[tool.uv.sources]
tendy-spider-contracts = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["../.."]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["../.."]
